tests/fail/var_literal_type.py
a: 10 = 13  # can only be 10
